generate geometry using csgrs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,8 @@ wasm-bindgen = { version = "0.2", optional = true }
 wasm-bindgen-futures = { version = "0.4", optional = true }
 console_error_panic_hook = { version = "0.1", optional = true }
 wasm-logger = { version = "0.2", optional = true }
-log                    = "0.4"
+log = "0.4"
+csgrs = { version = "0.18.0", default-features = false, features = ["delaunay", "f64"] }
 
 [features]
 default = [
